# ktalk

./: COPYING  Makefile  Makefile.am  TODO  configure.in  ktalk.c
