AC_INIT(ktalk.c)
AM_INIT_AUTOMAKE(ktalk,2)
AC_CHECK_LIB(curses, initscr,,echo "libcurses not found"; exit 1)
AC_CHECK_LIB(zephyr, ZInitialize,,echo "libzephyr not found"; exit 1)
AC_CHECK_PROG(krb5config, [krb5-config], yes)
if test "$krb5config" != yes; then
	echo "krb5-config not found."
	exit 1
fi
CPPFLAGS="$CPPFLAGS $(krb5-config --cflags krb5)"
LIBS="$LIBS $(krb5-config --libs krb5)"
AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
